clean nav menu code, fix prompt overflow , added contain scale-down hook in settings,

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:host{--main-bg-color:#1a1a1a;--primary-color:#03d0a8;--input-bg-color:#202124;--input-border-color:#494c50;--panel-bg-color:#292a2d;--panel-border-color:#494c50;--panel-border-radius:0px;--subgroup-bg-color:#1a1a1a;--subgroup-input-bg-color:#202124;--subgroup-input-border-color:#494c50;--subpanel-bg-color:#222325;--subpanel-border-color:#494c50;--subpanel-border-radius:8px;--textarea-focus-color:#5a5d60;--input-focus-color:#03d0a8;--outside-gap-size:8px;--inside-padding-size:8px;--tool-button-size:34px;--tool-button-radius:16px;--generate-button-height:70px;--cancel-color:#ef4444;--max-padding:max(var(--outside-gap-size),var(--inside-padding-size));--icon-color:#caccce;--icon-hover-color:#1a1a1a;--icon-size:22px;--nav-bg-color:#202124;--icon-color:#caccce;--icon-hover-color:#1a1a1a;--icon-size:22px;--nav-bg-color:#0a0a0a;--nav-color:#caccce;--nav-hover-color:#0a0a0a;--input-color:#caccce;--label-color:#caccce;--subgroup-input-color:#000000;--subgroup-label-color:#000000;--placeholder-color:#494c50;--text-color:#caccce;}/*BREAKPOINT_CSS_CONTENT*/
+:host{--main-bg-color:hsl(0deg 0% 10%);--primary-color:hsl(16deg 77% 60%);--input-bg-color:hsl(225deg 6% 13%);--input-border-color:hsl(214deg 5% 30%);--panel-bg-color:hsl(225deg 5% 17%);--panel-border-color:hsl(214deg 5% 30%);--panel-border-radius:8px;--subgroup-bg-color:hsl(0deg 0% 10%);--subgroup-input-bg-color:hsl(225deg 6% 13%);--subgroup-input-border-color:hsl(214deg 5% 30%);--subpanel-bg-color:hsl(220deg 4% 14%);--subpanel-border-color:hsl(214deg 5% 30%);--subpanel-border-radius:8px;--textarea-focus-color:hsl(210deg 3% 36%);--input-focus-color:hsl(16deg 77% 60%);--outside-gap-size:8px;--inside-padding-size:8px;--tool-button-size:34px;--tool-button-radius:16px;--generate-button-height:70px;--cancel-color:hsl(193deg 54% 55%);--max-padding:max(var(--outside-gap-size),var(--inside-padding-size));--icon-color:hsl(210deg 4% 80%);--icon-hover-color:hsl(0deg 0% 10%);--icon-size:22px;--nav-bg-color:hsl(0deg 0% 4%);--nav-color:hsl(210deg 4% 80%);--nav-hover-color:hsl(0deg 0% 4%);--input-color:hsl(210deg 4% 80%);--label-color:hsl(210deg 4% 80%);--subgroup-input-color:hsl(0deg 0% 0%);--placeholder-color:hsl(214deg 5% 30%);--text-color:hsl(210deg 4% 80%);}/*BREAKPOINT_CSS_CONTENT*/
 
 /*
 Theme Name: DarkUX
@@ -1137,6 +1137,7 @@ dark .gr-button-secondary:hover {
 	padding:0!important;
 	border-radius:0!important;
 	background-color:transparent!important;
+	overflow: visible !important;
 }
 
 
@@ -1588,6 +1589,7 @@ canvas[key=mask] {
     width: 100%;
     height: 100%;
     object-fit: scale-down;
+	/*object-fit: contain;*/
 }
 
 
